Integrate Log4j2 for enhanced WebStack test logging, update Maven dependencies with Jackson support, enable output in test logging via Surefire plugin, and refactor WebStack for streamlined origin handling and improved clarity.